optimize: 优化移动端体验

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -7,3 +7,9 @@
 .VPImage {
     image-rendering: pixelated;
 }
+
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
